@@ -1,3 +1,12 @@
+2007-02-27  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab-prefs.c: (create_props_model), (create_tree_props),
+	(fill_props_model):
+	* src/baobab-prefs.h:
+
+	Added filesystem total dimension for each mount point in
+        preferences window
+
 2007-02-26  Paolo Borelli  <pborelli@katamail.com>
 
 	* src/baoab-treeview.c:
